- Fixed a bug with /who -h in some cases, found by Zer0, fixed by butter (#0000361)
- Changed auth method sslpubkey into sslclientcert, which means it will check the X509 certificate of the
  user using X509_cmp. Also needing is some policy/conf setting to adjust if to reject invalid client certificates or whatever..
- Added set::ssl::options, with three options:
    fail-if-no-clientcert   - If SSL client connects and doesn't provide a client certificate, abort connection immediately
    verify-certificate      - Check the certificate's validity using X509 methods, check if we trust CA's, etc. 
                              It however does slip self signed certificates through UNLESS
    no-self-signed          - Don't allow self-signed certificates through (requires verify-certificate)
- Made conf parser mention if we make a link->options with CONNECT_SSL if we don't support SSL (and remove the CONNECT_SSL flag)
- Made conf parser mention if we make a SSL listener and we don't support SSL
- Added set::ssl::trusted-ca-file, if enabled, it will point the SSL stuff to use that file as trusted CA's (for verify-certificate)
- Made conf _not_ bitch that it doesn't know set::ssl
- Removed some leftover client certificate stuff
- Fixed bug #0000372 reported by MorPheus where Killed (<everything-but-the-first-char-in-killer-letter-got-shown> (reason))
- Fixed bug #0000377 reported by MorPheus where IPs of servers were shown in nick collision notices
- Fixed bug #0000371 reported by havlaz about an extra \n slipped in with the TKL notice
- Fixed bug with all TKL commands not accepting nicks anymore (#0000370 reported by Ravage)
- Fixed bug #0000342 reported by James LiGate about tokens leaking through from clients
- Removed some IPv6 resolver specifics that seemed illogical (reference to Jollino's IPv6 crashes)
- Fixed crash bug in m_tkl_line found by Keeper
- Fixed another m_tkl_line bug found by Keeper
- Fixed an samode bug reported by mcskaf (#0000403)